--- a/pages/chat/index.html
+++ b/pages/chat/index.html
@@ -6,8 +6,10 @@
     <title>Chat</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <i class='bx bx-arrow-back' onclick="back()"></i>
     <div id="chat">
         <ul id="messages"></ul>
         <form id="message-form">
