"Chats e profile prontos"

--- a/pages/chat/index.html
+++ b/pages/chat/index.html
@@ -13,7 +13,7 @@
     <div id="chat">
         <ul id="messages"></ul>
         <form id="message-form">
-            <input id="input-message" type="text" placeholder="Digite uma mensagem">
+            <input id="input-message" type="text" placeholder="Digite uma mensagem" autocomplete="off">
             <button type="submit">Enviar</button>
         </form>
     </div>
