--- a/pages/social/index.html
+++ b/pages/social/index.html
@@ -63,7 +63,7 @@
             <h1>Página Inicial</h1>
         </section>
         <nav>
-            <label>Chats <br> em Aberto</label>
+            <label>Mensagens Diretas</label>
             <ul id="chatsopn"></ul>
         </nav>
     </main>
