--- a/pages/acess/index.html
+++ b/pages/acess/index.html
@@ -48,7 +48,7 @@
                     </nav>
                 </div>
                 <div>
-                    <h2>Pais</h2>
+                    <h2>País</h2>
                     <input list="opcoes" id="paisinput">
                     <datalist id="opcoes"></datalist>
 
