--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -64,11 +64,11 @@
                     <div class="imc-infos">
                         <div>
                             <label>Altura</label>
-                            <input placeholder="Altura" type="number" id="hinput">
+                            <input placeholder="Altura (Ex:1.80)" type="number" id="hinput">
                         </div>
                         <div>
                             <label>Peso</label>
-                            <input placeholder="Peso" type="number" id="winput">
+                            <input placeholder="Peso (Ex:80.0)" type="number" id="winput">
                         </div>
                         <button onclick="ConcluirPerfil()" id="btnImc">Conclua seu Perfil</button>
                     </div>
