Arrumado Enter para o login > Ao criar chat , redirecionar para o mesmo > Enter para formularios > Foto_de_Perfil > Alterar o login e por um link que leva para o cadastrar, alterar o branco pintado do cadastrar para quando o login estiver selecionado o login ficar branco e quando o cadastrar estiver selecionado ficar o cadastrar branco. > Por o link quando clica para criar um chat.

--- a/pages/acess/index.html
+++ b/pages/acess/index.html
@@ -23,6 +23,7 @@
                 <input id="email_l" placeholder="E-mail" type="email">
                 <input id="senha_l" placeholder="Senha" type="password">
                 <button onclick="Processar_Login()">Entrar</button>
+                <a id="link" onclick="troca_cor_log()">Não Tem Conta?</a>
             </div>
             <div class="sign_box" id="sign">
                 
@@ -51,8 +52,9 @@
                     <h2>País</h2>
                     <input list="opcoes" id="paisinput">
                     <datalist id="opcoes"></datalist>
-
+                    
                     <button onclick="Processar_Cadastro()">Cadastrar-se</button>
+                    <a id="link" onclick="troca_cor_log()">Ja Tem Conta?</a>
                 </div>
                 <!-- <input type="file" accept=".png, .jpg, .jpeg"> -->
             </div>
