--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -34,7 +34,10 @@
                     <img id="flag">
                 </div>
                 <button onclick="Sair()" id="exitBtn">Sair</button>
-                <i class='bx bxs-send' id="sendDirect" ></i>
+                <div id="sendDirect">
+                    <i class='bx bxs-send'></i>
+                    <span>Abrir chat</span>
+                </div>
             </div>
             <div class="bottom">
                 <div class="personal">
