--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>FPH</title>
+    <title> FPH </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="32x32" />
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -19,7 +20,9 @@
                 </div>
             </div>
                 <div class="midside">
-                    <div>Logo</div>
+                    <div>
+                        <img src="./resources/assets/logo.png" width="20%">
+                    </div>
                 </div>
                 <div class="rightside">
                     <div>
@@ -27,6 +30,9 @@
                             <i class='bx bxs-user' id="icon_remove"></i>
                             <img class="img_profile" width="120%">
                         </div>
+                        <span id="text-entry">
+                            Entrar
+                        </span>
                     </div>
                 </div>
         </header>
@@ -35,7 +41,7 @@
                     <div class="left"><i class='bx bxs-left-arrow'></i></div>
                     <div class="content">
                         <div id="cel">
-                            <img src="resources/assets/celular.png">
+                            <img src="resources/assets/Carrosel.png">
                         </div>
                     </div>
                     <div class="right"><i class='bx bxs-right-arrow' ></i></div>
