Debug Co-authored-by: Manoela Pinheiro da Silva. <Ma2903@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,13 @@
                     <div class="left"><i class='bx bxs-left-arrow'></i></div>
                     <div class="content">
                         <div id="cel">
-                            <img src="resources/assets/Carrosel.png">
+                            <div class="img">
+                                <img src="resources/assets/Carrosel.png">
+                            </div>
+                            <div class="text">
+                                <h1>Aproveite o dia!</h1>
+                                <h2>Transforme minutos em perca de calorias!</h2>
+                            </div>
                         </div>
                     </div>
                     <div class="right"><i class='bx bxs-right-arrow' ></i></div>
