--- a/public/index.html
+++ b/public/index.html
@@ -53,33 +53,28 @@
                     <div class="right"><i class='bx bxs-right-arrow' ></i></div>
                 </div>
             <!-- AKI -->
-                <div class="quemSomos">
-                    <div class="textos">
-                        <div class="topo">
-                            <b>Quem somos?</b>
+            <div class="quemSomos">
+                <div class="textos">
+                    <div class="topo">
+                        <b>Quem somos?</b>
+                    </div>
+                    <div class="informaçoes">
+                        <div class="text1">
+                            <p>Somos a food and physical health, um site feito para ajudar as pessoas a terem uma vida saudável através de sugestões para uma boa alimentação, receitas mais saudáveis e prática de exercícios físicos.</p>
+                            <img src="resources/assets/frutas.png" class="image">
                         </div>
-                        <div class="informaçoes">
-                            <div class="text1">
-                                <p>Somos a food and physical health, um site feito para ajudar as pessoas a terem uma vida saudável através de sugestões para uma boa alimentação, receitas mais saudáveis e prática de exercícios físicos.</p>
-                                <img src="resources/assets/frutas.png" class="image">
-                            </div>
-                            <div class="text2">
-                                <img src="resources/assets/meditacao.png" class="image">
-                                <p>Estamos no mercado desde 2021, por isso estamos sempre antenados aos novos costumes alimentares. O nosso objetivo é proporcionar uma maneira de obter uma vida saudável de maneira gratuita.</p>
-                            </div>
+                        <div class="text2">
+                            <img src="resources/assets/meditacao.png" class="image">
+                            <p>Estamos no mercado desde 2021, por isso estamos sempre antenados aos novos costumes alimentares. O nosso objetivo é proporcionar uma maneira de obter uma vida saudável de maneira gratuita.</p>
                         </div>
                     </div>
                 </div>
-                <div class="sobreplat">
-                    <img src="resources/assets/sobre a plataforma.png" class="imageplat">
-                </div>
-                <div class="receitas">
-                    <div class="texto">
-                        <div class="topo">
-                            <b>Receitas saudáveis</b>
-                        </div>
-                    </div>
-                </div>
+            </div>
+            <div class="sobreplat"></div>
+            <div class="receitas"></div>
+            <div class="CEO"></div>
+            <div class="rede"></div>
+            <div class="rodape"></div>
         </div>
         <div id="boxmenu">
             <div id="menu" class="men_lateral">
