--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title> FPH </title>
+    <title> FPH | Home</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="32x32" />
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
@@ -87,7 +87,7 @@
                         <i class='bx bx-bowl-hot'></i>
                         <span>Alimentos</span>
                     </div>
-                    <div>
+                    <div onclick="Troca_Pagina('fitness')">
                         <i class='bx bx-dumbbell'></i> 
                         <span>Fitness</span>
                     </div>
