--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,31 @@
     <div class="home_screen">
         <header class="menu">
             <div class="leftside">
-                
+                <nav>
+                    <div onclick="Troca_Pagina('social')">
+                        <i class='bx bx-conversation' ></i>
+                        <span>Social</span>
+                    </div>
+                    <div onclick="Troca_Pagina('fitness')">
+                        <i class='bx bx-dumbbell'></i>
+                        <span>Fitness</span>
+                    </div>
+                    <div onclick="Troca_Pagina('alimentos')">
+                        <i class='bx bxs-baguette'></i>
+                        <span>Alimentos</span>
+                    </div>
+                    <div onclick="Troca_Pagina('doencas')">
+                        <i class='bx bxs-virus'></i>
+                        <span>Doenças</span>
+                    </div>
+                    <div onclick="Troca_Pagina('calculadora')">
+                        <i class='bx bxs-calculator'></i>
+                        <span>Calculadora</span>
+                    </div>
+                </nav>
             </div>
             <div class="midside">
-                <div>
-                    <img src="./resources/assets/logo.png" width="20%">
-                </div>
+                <img src="./resources/assets/logo.png" width="20%">
             </div>
             <div class="rightside">
                 <div>
