"Grande DEBUG e limpeza de codigo"

--- a/pages/chat/index.html
+++ b/pages/chat/index.html
@@ -9,6 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <audio id="notificationSound" src="../../resources/assets/chat/notification.mp3"></audio>
     <i class='bx bx-arrow-back' onclick="back()"></i>
     <div id="chat">
         <ul id="messages"></ul>
