--- a/pages/social/index.html
+++ b/pages/social/index.html
@@ -45,7 +45,7 @@
         <i class='bx bx-arrow-back' onclick="volta()" id="btn"></i>
         <div>
             <span>
-                <input type="text" name="Search">
+                <input type="text" name="Search" id="SearchInput">
                 <i class='bx bx-search' id="btna"></i>
             </span>
         </div>
