--- a/public/index.html
+++ b/public/index.html
@@ -52,47 +52,104 @@
                 </div>
             </div>
         </header>
-        <div class="carrosel">
-            <div class="sliders">
-                <div class="slides">
-                    <input type="radio" name="radio-btn" id="radio1">
-                <input type="radio" name="radio-btn" id="radio2">
-                <input type="radio" name="radio-btn" id="radio3">
-
-                <div class="conteudo">
-                    <div class="slide1">
-                        <img src="resources/assets/celular.png"/>
-                        <h1>Aproveite o dia!</h1>
-                        <h2>Transforme minutos em perca de calorias!</h2>
-                    </div>
-                    <div class="slide2">
-                        <h1>JP GAY</h1>
-                    </div>
-                    <div class="slide3">
-                        <h1>JP GAY2</h1>
-                    </div>
+        <div class="container-slider">
+            <button id="prev-button"><img src="resources/assets/arrow.png"></button>
+            <div class="container-images">
+                <div class="slider on">
+                    <img src="resources/assets/celular.png">
                 </div>
-
-                <div class="auto">
-                    <div class="auto-btn1"></div>
-                    <div class="auto-btn2"></div>
-                    <div class="auto-btn3"></div>
+            </div>
+            <button id="next-button"><img src="resources/assets/arrow.png"></button>
+        </div>
+        <div class="quemsomos">
+            <header><h1>Quem Somos?</h1></header>
+            <div class="conteudo">
+                <div class="text1"><img src="resources/assets/meditacao.png">Somos a food and physical health, um site feito para ajudar as pessoas a terem uma vida saudável através de sugestões para uma boa alimentação, receitas mais saudáveis e prática de exercícios físicos.</div>
+                <div class="text2">Estamos no mercado desde 2021, por isso estamos sempre antenados aos novos costumes alimentares. O nosso objetivo é proporcionar uma maneira de obter uma vida saudável de maneira gratuita.<img src="resources/assets/frutas.png"></div>
+            </div>
+        </div>
+        <div class="sobreplat">
+            <div class="infoleft">
+                <header><b>Sobre a plataforma</b></header>
+                <div class="sobre">
+                    <div class="infos"><img src="resources/images/exercicio.jpg">sugestões de exercícios físicos</div>
+                    <div class="infos"><img src="resources/images/rede.jpg">Rede social própria</div>
+                    <div class="infos"><img src="resources/images/refeicao.png">Calculadora de calorias</div>
+                    <div class="infos"><img src="resources/images/medico.jpg">Informação sobre doenças</div>
+                    <div class="infos"><img src="resources/images/alimentacao.jpg">Dicas para alimentação balanceada</div>
                 </div>
-
-                <div class="manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
-                </div>
+            </div>
+            <div class="inforight">
+                <div class="imagens">
+                    <img src="resources/images/salada.jpg" class="img1">
+                    <img src="resources/images/meditar.jpg" class="img2">
                 </div>
             </div>
         </div>
-        <div class="quemsomos">
-            
+        <div class="receitas">
+            <header><h1>Receitas saudáveis</h1></header>
+            <div class="receita">
+                <div class="receit">
+                    <p>Suco verde</p>
+                    <div class="recei">
+                        <ul>
+                            <li>Refrescante</li>
+                            <li>Saudável</li>
+                        </ul>
+                        <img src="resources/images/suco.jpg" class="imgsuco1">
+                    </div>
+                </div>
+                <div class="receit">
+                    <p>Suco verde</p>
+                    <div class="recei">
+                        <ul>
+                            <li>Refrescante</li>
+                            <li>Saudável</li>
+                        </ul>
+                        <img src="resources/images/suco.jpg" class="imgsuco1">
+                    </div>
+                </div>
+                <div class="receit">
+                    <p>Suco verde</p>
+                    <div class="recei">
+                        <ul>
+                            <li>Refrescante</li>
+                            <li>Saudável</li>
+                        </ul>
+                        <img src="resources/images/suco.jpg" class="imgsuco1">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="sobreplat"></div>
-        <div class="receitas"></div>
-        <div class="ceo"></div>
+        <div class="ceo">
+            <header>Usuários satisfeitos</header>
+            <div class="ceos">
+                <div class="ceoss">
+                    <div class="caxavd">
+                        <img src="" class="ceo1">
+                        <div class="nome">Daniel</div>
+                        <div class="func">CEO de Startup</div>
+                    </div>
+                    <p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p>
+                </div>
+                <div class="ceoss">
+                    <div class="caxavd">
+                        <img src="" class="ceo1">
+                        <div class="nome">João Pedro</div>
+                        <div class="func">Executivo</div>
+                    </div>
+                    <p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p>
+                </div>
+                <div class="ceoss">
+                    <div class="caxavd">
+                        <img src="" class="ceo1">
+                        <div class="nome">Manoela</div>
+                        <div class="func">Empreendedora</div>
+                    </div>
+                    <p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p>
+                </div>
+            </div>
+        </div>
         <div class="redes"></div>
     </div>
 </body>
