--- a/pages/calculadora/index.html
+++ b/pages/calculadora/index.html
@@ -51,10 +51,10 @@
         </div>
     </header>
     <section id="screen_main">
-        <input type="number" placeholder="Quantas calorias você quer peder?">
+        <input type="number" placeholder="Quantas calorias você quer perder?">
     </section>
     <section id="screen_infos" style="display: none;">
-        
+
     </section>
 </body>
 </html>
