--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -80,12 +80,8 @@
             </div>
         </section>
         <section class="exercicios">
-            <h2>Para uma vida mais legal</h2>
-            <div class="container">
-                <input type="text" placeholder="">
-                <i class='bx bx-search' ></i>
-            </div>
-            <section id="items-here" class="scrollable-div" tabindex="0"></section>
+            <h2>Exercicios</h2>
+            <section id="items-here"tabindex="0"></section>
         </section>
     </main>
     <footer>
