--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -65,15 +65,15 @@
                 <div class="title">
                     <h1>Qual a relação entre a saúde e os exercícios físicos?</h1>
                 </div>
-                <div class="container">
-                    <h2>Benefícios Físicos:</h2>
+                <div class="container" id="f1">
+                    <h2>Vantagens Físicas Ampliadas:</h2>
                     <p>Os exercícios físicos regulares têm impactos positivos em várias áreas da saúde. Eles ajudam a melhorar a resistência cardiovascular, fortalecer músculos e ossos, aumentar a flexibilidade e melhorar a coordenação motora. O exercício também contribui para a manutenção de um peso saudável, diminuindo o risco de obesidade, diabetes tipo 2 e outras doenças relacionadas ao peso. Além disso, a atividade física estimula a circulação sanguínea, fortalece o sistema imunológico e ajuda a controlar os níveis de colesterol e pressão arterial.</p>
                 </div>
-                <div class="container">
+                <div class="container" id="f2">
                     <h2>Impacto Mental e Emocional:</h2>
                     <p>O exercício não apenas fortalece o corpo, mas também beneficia a saúde mental. Ele é conhecido por liberar endorfinas, substâncias químicas que melhoram o humor e reduzem o estresse. O envolvimento em atividades físicas pode ajudar a aliviar sintomas de ansiedade e depressão, melhorar a autoestima e aumentar a autoconfiança. A prática regular de exercícios também melhora a qualidade do sono, aumentando a sensação de descanso e rejuvenescimento.</p>
                 </div>
-                <div class="container">
+                <div class="container" id="f3">
                     <h2>Prevenção de Doenças Crônicas:</h2>
                     <p>A relação entre exercícios físicos e prevenção de doenças crônicas é notável. A atividade física regular está associada a uma redução significativa do risco de várias condições, como doenças cardíacas, derrames, certos tipos de câncer, osteoporose e doenças neurodegenerativas. Ao manter o corpo ativo, você contribui para o funcionamento adequado do sistema cardiovascular, regulação hormonal e equilíbrio metabólico, reduzindo assim as chances de desenvolver doenças crônicas ao longo do tempo.</p>
                 </div>
@@ -81,11 +81,37 @@
         </section>
         <section class="exercicios">
             <h2>Exercicios</h2>
+            <span id="Tr_esq">
+                <i class='bx bx-chevron-left'></i>
+            </span>
             <section id="items-here"tabindex="0"></section>
+            <span id="Tr_dir"">
+                <i class='bx bx-chevron-right' ></i>
+            </span>
         </section>
     </main>
     <footer>
-        teste
+        <img src="../../resources/assets/logo_text.png" width="20%">
+        <div class="lista">
+            <h3>Desenvolvedores:</h6>
+            <a href="https://github.com/JP1005YT" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>João Pedro Girotto</span>
+            </a>
+            <a href="https://github.com/Ma2903" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>Manoela Pinheiro</span>
+            </a>
+            <a href="https://github.com/KiraZiki" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>Daniel José Dantas</span>
+            </a>
+        </div>
+        <div class="lista">
+            <h3>Contatos</h3>
+                <span>IG: @Ftpoficial</span>
+                <span>FACE: @Ftpoficial</span>
+        </div>
     </footer>
 </body>
 </html>
