--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             <button id="prev-button"><img src="resources/assets/arrow.png"></button>
             <div class="container-images">
                 <div class="slider on">
-                    <img src="resources/assets/celular.png">
+                    <img src="resources/assets/Home.png">
                 </div>
             </div>
             <button id="next-button"><img src="resources/assets/arrow.png"></button>
@@ -125,32 +125,63 @@
             <header>Usuários satisfeitos</header>
             <div class="ceos">
                 <div class="ceoss">
+                    <div class="fotoceo"><img src="resources/Ceosphoto/daniel.jpg" class="a"></div>
                     <div class="caxavd">
-                        <img src="" class="ceo1">
-                        <div class="nome">Daniel</div>
-                        <div class="func">CEO de Startup</div>
+                        <p>Daniel</p>
+                        <p>CEO da Startup</p>
                     </div>
-                    <p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p>
+                    <div class="depoimento"><p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p></div> 
                 </div>
                 <div class="ceoss">
+                    <div class="fotoceo"><img src="resources/Ceosphoto/JP.jpg" class="a"></div>
                     <div class="caxavd">
-                        <img src="" class="ceo1">
-                        <div class="nome">João Pedro</div>
-                        <div class="func">Executivo</div>
+                        <p>João Pedro</p>
+                        <p>Executivo</p>
                     </div>
-                    <p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p>
+                    <div class="depoimento"><p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p></div>
                 </div>
                 <div class="ceoss">
+                    <div class="fotoceo"><img src="resources/Ceosphoto/manoela.jpg" class="a"></div>
                     <div class="caxavd">
-                        <img src="" class="ceo1">
-                        <div class="nome">Manoela</div>
-                        <div class="func">Empreendedora</div>
+                        <p>Manoela</p>
+                        <p>Empreendedora</p>
                     </div>
-                    <p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p>
+                    <div class="depoimento"><p>Depoimentos são frases curtas das pessoas que curtem sua marca. É uma ótima forma de convencer os clientes a experimentar seus serviços.</p></div>
                 </div>
             </div>
         </div>
-        <div class="redes"></div>
+        <div class="redes">
+            <div class="psocial"><img src=""><h1>Retire esta frase e adicione a imagem!</h1></div>
+            <div class="mensagem">
+                <div class="mensagemen">
+                    <div class="mensagemmensagem">
+                        <h1>Rede Social</h1>
+                        <h1>Integrada</h1>
+                        <h2>Junte-se a nós na busca por uma vida mais saudável.</h2>
+                        <h2>Conecte-se, compartilhe e transforme-se!</h2>
+                        <img src="resources/assets/celula.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="imagems">
+                <img src="resources/assets/saudavel.jpg">
+                <img src="resources/assets/correndo.jpg">
+            </div>
+            <div class="informacoes">
+                <div class="top">
+                    <h1>Para contato</h1>
+                    <h3>Rua João Ântonio Sanches, 482, Presidente Prudente - SP</h3>
+                    <h4>(18) 1000-8489</h4>
+                </div>
+                <div class="bot">
+                    <div class="git"><img src="resources/assets/git.png">fph@foodpsysicalhealth.com</div>
+                    <div class="insta"><p><img src="resources/assets/insta.png">@FPH</p></div>
+                    <div class="face"><p><img src="resources/assets/facebook.png">FoodPsysicalHealth</p></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
