MEGA COMMIT filtros prontos

--- a/pages/calculadora/index.html
+++ b/pages/calculadora/index.html
@@ -35,7 +35,7 @@
             </nav>
         </div>
         <div class="midside">
-            <img src="../../resources/assets/logo.png" width="20%">
+            <img src="../../resources/assets/logo.png" width="20%" class="logoHome" id="logohere">
         </div>
         <div class="rightside">
             <div>
@@ -59,7 +59,7 @@
         <section id="screen_infos">
             <div class="infos inative">
                 <section>
-                    <h2><span id="num_calc"></span>Kcal Equivale a:</h2>
+                    <h2><span id="num_calc"></span> Kcal Equivale a:</h2>
                     <div>
                         <img src="../../resources/assets/calc/apple.jpg" width="80%">
                         <p><span id="val_maca"></span>g de Maça</p>
@@ -76,7 +76,7 @@
             </div>
             <div class="infos inative h-200">
                 <section>    
-                    <h2><span id="num_calc"></span>Kcal da pra ser queimada fazendo:</h2>
+                    <h2><span id="num_calc"></span> Kcal da pra ser queimada fazendo:</h2>
                     <div>
                         <img src="../../resources/assets/calc/corrida.jpg" width="80%">
                         <p><span id="val_corr"></span> minutos Correndo(16/kph)</p>
@@ -93,16 +93,42 @@
             </div>
             <div class="infos anm inative h-500">
                 <section>
-                    
+                    <h2><span id="num_calc"></span> Kcal:</h2>
+                    <div>
+
+                    </div>
                 </section>
             </div>
-            <div class="infos inative h-800">
+            <div class="infos inative h-1000">
                 <section>
                     
                 </section>
             </div>
         </section>
     </section>
+    <footer>
+        <img src="../../resources/assets/logo_text.png" width="20%">
+        <div class="lista">
+            <h3>Desenvolvedores:</h6>
+            <a href="https://github.com/JP1005YT" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>João Pedro Girotto</span>
+            </a>
+            <a href="https://github.com/Ma2903" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>Manoela Silva Pinheiro</span>
+            </a>
+            <a href="https://github.com/KiraZiki" target="_blank">
+                <i class='bx bxl-github'></i>
+                <span>Daniel José Dantas</span>
+            </a>
+        </div>
+        <div class="lista">
+            <h3>Contatos</h3>
+            <span><i class='bx bxl-instagram-alt' ></i> @Ftpoficial</span>
+            <span><i class='bx bxl-facebook-square'></i> @Ftpoficial</span>
+        </div>
+    </footer>
     <script src='main.js'></script>
 </body>
 </html>
