--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -37,7 +37,7 @@
             </nav>
         </div>
         <div class="midside">
-            <img src="../../resources/assets/logo.png" width="20%">
+            <img src="../../resources/assets/logo.png" id="logohere">
         </div>
         <div class="rightside">
             <div>
@@ -100,7 +100,7 @@
             </a>
             <a href="https://github.com/Ma2903" target="_blank">
                 <i class='bx bxl-github'></i>
-                <span>Manoela Pinheiro</span>
+                <span>Manoela Silva Pinheiro</span>
             </a>
             <a href="https://github.com/KiraZiki" target="_blank">
                 <i class='bx bxl-github'></i>
@@ -109,8 +109,8 @@
         </div>
         <div class="lista">
             <h3>Contatos</h3>
-                <span>IG: @Ftpoficial</span>
-                <span>FACE: @Ftpoficial</span>
+            <span><i class='bx bxl-instagram-alt' ></i> @Ftpoficial</span>
+            <span><i class='bx bxl-facebook-square'></i> @Ftpoficial</span>
         </div>
     </footer>
 </body>
