--- a/pages/social/index.html
+++ b/pages/social/index.html
@@ -56,14 +56,14 @@
     </header>
     <main>
         <nav>
-            <label>Tendências</label>
+            <label>Hashtags em Alta</label>
             <ul id="morehashs"></ul>
         </nav>
         <section id="dashboard">
             <h1>Página Inicial</h1>
         </section>
         <nav>
-            <label>Mensagens Diretas</label>
+            <label>Chats em aberto</label>
             <ul id="chatsopn"></ul>
         </nav>
     </main>
