--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -43,7 +43,7 @@
             <div>
                 <div id="btnmenu" onclick="Troca_Pagina('acess')">
                     <i class='bx bxs-user' id="icon_remove"></i>
-                    <img class="img_profile" width="120%">
+                    <img class="img_profile" height="100%">
                 </div>
                 <span id="text-entry">
                     Entrar
