--- a/pages/social/index.html
+++ b/pages/social/index.html
@@ -13,8 +13,8 @@
         <i class='bx bx-left-arrow-alt' onclick="ToNovoPost()"></i>
         <div class="screen">
             <section>
-                <input type="text" id="newtitle" placeholder="Titulo do Post">
-                <textarea rows="4" cols="20" id="newcontent"></textarea>
+                <input type="text" id="newtitle" placeholder="Titulo do Post" maxlength="30">
+                <textarea rows="4" cols="20" id="newcontent" maxlength="200" placeholder="Conteudo do Post"></textarea>
             </section>
             <div>
                 <section>
