--- a/pages/fitness/index.html
+++ b/pages/fitness/index.html
@@ -84,7 +84,7 @@
             <span id="Tr_esq">
                 <i class='bx bx-chevron-left'></i>
             </span>
-            <section id="items-here"tabindex="0"></section>
+            <section id="items-here" tabindex="0"></section>
             <span id="Tr_dir"">
                 <i class='bx bx-chevron-right' ></i>
             </span>
@@ -100,7 +100,7 @@
             </a>
             <a href="https://github.com/Ma2903" target="_blank">
                 <i class='bx bxl-github'></i>
-                <span>Manoela Silva Pinheiro</span>
+                <span>Manoela Silva</span>
             </a>
             <a href="https://github.com/KiraZiki" target="_blank">
                 <i class='bx bxl-github'></i>
