alteraçoes nos Profiles

--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -61,7 +61,8 @@
                 </div>
                 <div class="imc">
                     <div class="imc-img-div">
-                        <img src="../../Ideia.avif" width="100%">
+                        <img src="../../Ideia.png" height="80%">
+                        <img src="../../Seta.png" height="60%" id="img2">
                     </div>
                     <label>IMC:<h2 id="imchere">Any%</h2></label>
                     <div class="imc-infos">
