--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,31 @@
             <button id="prev-button"><img src="resources/assets/arrow.png"></button>
             <div class="container-images">
                 <div class="slider on">
-                    <img src="resources/assets/Home.png">
+                    <div class="quad">
+                        <img src="resources/assets/carrosel1.png">
+                        <div class="infofo">
+                            <h1>Aproveite o dia.</h1>
+                            <h3>Transforme minutos em perda de calorias!</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider">
+                    <div class="quad">
+                        <img src="resources/assets/carrosel2.png">
+                        <div class="infofo">
+                            <h1>Coma bem.</h1>
+                            <h3>Alimentação saudável traz uma mente saudáavel!</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider">
+                    <div class="quad">
+                        <img src="resources/assets/carrosel3.png">
+                        <div class="infofo">
+                            <h1>Coma bem, viva mais.</h1>
+                            <h3>Um corpo saudável requer uma alimentação saudável!</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
             <button id="next-button"><img src="resources/assets/arrow.png"></button>
