--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                         <img src="resources/assets/carrosel2.png">
                         <div class="infofo">
                             <h1>Coma bem.</h1>
-                            <h3>Alimentação saudável traz uma mente saudáavel!</h3>
+                            <h3>Alimentação saudável traz uma mente saudável!</h3>
                         </div>
                     </div>
                 </div>
